# mytorch

./: .gitignore  CIFAR10_test.py  MNIST_test.py  mytensor.py  mytensor_autograd.py  pyproject.toml  report.md  setup.py  test.cpp  train_cifar10.py  train_cifar10_pytorch.py
src/: conv.cu  conv.cuh  cuda_utils.cuh  functional.cu  functional.cuh  linear.cu  linear.cuh  pooling.cu  pooling.cuh  pybind.cpp  tensor.cu  tensor.cuh
tests/: test_ops.py
